--- a/src/pages/set_net/set_net.html
+++ b/src/pages/set_net/set_net.html
@@ -56,7 +56,8 @@
                             <input type="text" class="form-control item_input" id="spare_dns" placeholder="" ng-model="net.data.spare_dns">
                         </div>
                     </div>
-                    <div class="row" ng-if="net.type.enable == 'yes'">
+                    <div class="row">
+                    <!-- <div class="row" ng-if="net.type.enable == 'yes'"> -->
                         <div class="form-group col-md-1 col-md-offset-5">
                             <label style="width: 100%;">&nbsp;</label>
                             <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="keep()">保&nbsp;存</button>
