--- a/tpl/blocks/nav.html
+++ b/tpl/blocks/nav.html
@@ -126,11 +126,11 @@
             <span class="font-bold">设置</span>
         </a>
         <ul class="nav nav-sub dk">
-            <li ui-sref-active="active">
+            <!-- <li ui-sref-active="active">
                 <a ui-sref="app.set_basic">
                     <span>基本设置</span>
                 </a>
-            </li>
+            </li> -->
             <li ui-sref-active="active">
                 <a ui-sref="app.set_net_ip">
                     <span>内部网络IP段</span>
