--- a/src/pages/reportform/reportform.html
+++ b/src/pages/reportform/reportform.html
@@ -31,35 +31,28 @@
                 <span class="item-span-content">月报</span>
             </label>
             &nbsp;
-
             <span class="item-span-content">自定义时间:</span>
             <label for="reservationtime" class="time_input_report">
                 <input type="text" ng-click="custom()" class="form-control" id="reservationtime" readonly style="background-color: #fff;">
             </label>
-
-
         </div>
         <div class="head-name">
-
             <span class="head-mid-title">报表名称:</span>
             <label>
                 <input type="text" placeholder="请输入报表名称(必填)" ng-model="reportName" class="form-control" style="background-color: #fff;border-radius: 5px;"
-                ng-focus="inputfocus()" ng-class="reportNameInput ? '': 'bordercolor'">
+                    ng-focus="inputfocus()" ng-class="reportNameInput ? '': 'bordercolor'">
             </label>
             <!-- <span class="alertInfo" ng-if="alertMsg">报表名称不能为空。</span> -->
         </div>
         <div class="head-name">
-
             <span class="head-mid-title">报表格式:</span>
             <label>
                 <select class="form-control" style="background-color: #fff;" ng-model="selectedName" ng-options="x.value as x.name for x in datatype"></select>
             </label>
         </div>
-
         <div class="head-bom">
             <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="generate()">生成报表</button>
         </div>
-
     </div>
     <div class="main">
         <table class="table table-striped ng-cloak">
@@ -99,7 +92,7 @@
             <em>共有
                 <span ng-bind="pages.count"></span>条报表</em>
             <!-- angularjs分页 -->
-            <ul class="pagination pagination-sm no-margin pull-right ng-cloak" >
+            <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                 <li>
                     <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-if="pages.pageNow>1">上一页</a>
                 </li>
@@ -143,10 +136,8 @@
         </div>
         <!-- /.angularjs分页 -->
     </div>
-
-    <div class="echarts" >
+    <div class="echarts">
         <!-- 未处理告警 -->
-        <div id="untreatedalarm"></div>
+        <div id="untreatedalarm_report"></div>
     </div>
-
 </div>
