--- a/src/pages/set_net_ip/set_net_ip.html
+++ b/src/pages/set_net_ip/set_net_ip.html
@@ -21,6 +21,12 @@
                             </div>
                         </div>
                     </div>
+                <div>
+                    序号
+                    IP段
+                    掩码
+                    操作（删除）
+                </div>
                 </div>
             </div>
         </div>
