--- a/src/pages/set_rule/set_rule.html
+++ b/src/pages/set_rule/set_rule.html
@@ -5,6 +5,10 @@
             <div class="set_content">
                 <div class="row">
                     <div class="col-md-12">
+                        实时更新
+                        确定
+                        离线更新
+                        确定
                         <div class="box box-solid">
                             <div class="box-header with-border" style="border:0">
                                 <ul id="myTab" class="nav nav-tabs" ng-init="selected == 0">
