--- a/src/pages/safety_file/safety_file.html
+++ b/src/pages/safety_file/safety_file.html
@@ -60,7 +60,7 @@
                             <!-- angularjs分页 -->
                             <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                 <em>共有
-                                    <span ng-bind="pages.count"></span>条告警</em>
+                                    <span ng-bind="pages.count"></span>条</em>
                                 <!-- angularjs分页 -->
                                 <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                     <li>
