--- a/src/pages/set_net/set_net.html
+++ b/src/pages/set_net/set_net.html
@@ -4,8 +4,8 @@
         <div class="col-md-12 ">
             <div class="set_content">
                 <!-- 网络设备 -->
-                <div class="email_item">
-                    <div class="email_item_header row">
+                <div class="net_item">
+                    <div class="net_item_header row">
                         <h4 class="col-md-1" style="min-width:130px">网络设备</h4>
                         <div class="col-md-3" style="max-width: 230px">
                             <select class="form-control input_radius" style="background-color: #fff;" ng-model="net.statusData" ng-options="x.num as x.type for x in statusData"></select>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <!-- 代理服务器 -->
-                <div class="email_item">
-                    <div class="email_item_header row">
+                <div class="net_item">
+                    <div class="net_item_header row">
                         <h4 class="col-md-1" style="min-width:130px">代理服务器</h4>
                     </div>
                     <div class="form-group row item_form">
