--- a/src/pages/safety_size/safety_size.html
+++ b/src/pages/safety_size/safety_size.html
@@ -57,7 +57,7 @@
                             <!-- angularjs分页 -->
                             <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                 <em>共有
-                                    <span ng-bind="pages.count"></span>条告警</em>
+                                    <span ng-bind="pages.count"></span>条</em>
                                 <!-- angularjs分页 -->
                                 <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                     <li>
@@ -75,8 +75,6 @@
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-bind="pages.pageNow-1" ng-if="pages.pageNow>2"></a>
                                     </li>
-
-                                    <li class="active">
                                         <a href="javascript:void(0);" ng-bind="pages.pageNow"></a>
                                     </li>
                                     <li>
