--- a/src/pages/safety_url/safety_url.html
+++ b/src/pages/safety_url/safety_url.html
@@ -73,7 +73,7 @@
                             <!-- angularjs分页 -->
                             <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                 <em>共有
-                                    <span ng-bind="pages.count"></span>条告警</em>
+                                    <span ng-bind="pages.count"></span>条</em>
                                 <!-- angularjs分页 -->
                                 <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                     <li>
@@ -85,30 +85,24 @@
                                     <li>
                                         <a href="javascript:void(0);" ng-if="pages.pageNow>4">...</a>
                                     </li>
-
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-2)" ng-bind="pages.pageNow-2" ng-if="pages.pageNow>3"></a>
                                     </li>
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-bind="pages.pageNow-1" ng-if="pages.pageNow>2"></a>
                                     </li>
-
                                     <li class="active">
                                         <a href="javascript:void(0);" ng-bind="pages.pageNow"></a>
                                     </li>
-
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-bind="pages.pageNow+1" ng-if="pages.pageNow<pages.maxPage-1"></a>
                                     </li>
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+2)" ng-bind="pages.pageNow+2" ng-if="pages.pageNow<pages.maxPage-2"></a>
                                     </li>
-
-
                                     <li>
                                         <a href="javascript:void(0);" ng-if="pages.pageNow<pages.maxPage-3">...</a>
                                     </li>
-
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.maxPage)" ng-bind="pages.maxPage" ng-if="pages.pageNow<pages.maxPage"></a>
                                     </li>
@@ -116,16 +110,11 @@
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
                                     </li>
                                 </ul>
-
                             </div>
-
-
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
