--- a/src/pages/safety_user/safety_user.html
+++ b/src/pages/safety_user/safety_user.html
@@ -9,7 +9,6 @@
                             <i class="fa fa-bell-o"></i> 用户调查</a>
                     </li>
                 </ul>
-
                 <div class="tab-content" style="padding-top:0px;border-bottom:0px;">
                     <!-- protect -->
                     <div class="tab-pane active" id="protect">
@@ -35,9 +34,7 @@
                                     <img src="../src/images/icos/download.png" ng-click="download(item.id)" width="16" height="16" alt="">
                                 </span>
                             </div>
-
                         </div>
-
                         <div class="row margin">
                             <table class="table table-hover ng-cloak">
                                 <tr>
@@ -57,7 +54,7 @@
                             <!-- angularjs分页 -->
                             <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                 <em>共有
-                                    <span ng-bind="pages.count"></span>条告警</em>
+                                    <span ng-bind="pages.count"></span>条</em>
                                 <!-- angularjs分页 -->
                                 <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                     <li>
@@ -69,7 +66,6 @@
                                     <li>
                                         <a href="javascript:void(0);" ng-if="pages.pageNow>4">...</a>
                                     </li>
-
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-2)" ng-bind="pages.pageNow-2" ng-if="pages.pageNow>3"></a>
                                     </li>
@@ -87,12 +83,9 @@
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+2)" ng-bind="pages.pageNow+2" ng-if="pages.pageNow<pages.maxPage-2"></a>
                                     </li>
-
-
                                     <li>
                                         <a href="javascript:void(0);" ng-if="pages.pageNow<pages.maxPage-3">...</a>
                                     </li>
-
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.maxPage)" ng-bind="pages.maxPage" ng-if="pages.pageNow<pages.maxPage"></a>
                                     </li>
@@ -100,16 +93,11 @@
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
                                     </li>
                                 </ul>
-
                             </div>
-
-
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
