--- a/src/pages/set_rule/set_rule.html
+++ b/src/pages/set_rule/set_rule.html
@@ -4,44 +4,44 @@
         <div class="col-md-12 ">
             <div class="set_content">
                 <div class="row">
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         实时更新
                         确定
                         离线更新
                         确定
-                        <div class="box box-solid">
-                            <div class="box-header with-border" style="border:0">
-                                <ul id="myTab" class="nav nav-tabs" ng-init="selected == 0">
-                                    <li ng-class="{'active':selected == $index}" ng-click="show($index)" ng-repeat="item in tab_data">
-                                        <a data-toggle="tab">
-                                            <i class="fa fa-bell-o"></i>
-                                            <span ng-bind="item.name"></span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div id="myTabContent" class="tab-content" ng-if="selected == $index" ng-repeat="item in tab_data">
-                                <div style="cursor: pointer;" ng-if="selected == 0">
-                                    <div style="margin:5px 20px">
-                                        <div class="form-group" style="margin-bottom:5px 20px">
-                                            <label for="InputFile"></label>
-                                            <input type="file" id="InputFile" style="display: none;" accept="application/x-msdownload" data-url="addversion" name="file">
-                                            <br>
-                                            <label class="glyphicon glyphicon-plus-sign text-green" style="font-size: 48px" for="InputFile"></label>
-                                            <span ng-bind="sensorVersion.FileName" style="font-size: 14px;" class="ng-binding"></span>
-                                            <p class="help-block">上传的文件请按照模板的格式</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div style="cursor: pointer;" ng-if="selected == 1">
-                                    guizeku
-                                </div>
-                                <div style="cursor: pointer;" ng-if="selected == 2">
-                                    <div style="margin:5px 20px">
-                                        gui
-                                    </div>
-                                </div>
-                            </div>
+                    
+                    </div> -->
+                </div>
+                <div class="rule_item">
+                    <div class="rule_item_header row">
+                        <h4 class="col-md-1" style="min-width:150px">实时更新</h4>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-1 col-md-offset-5">
+                            <label style="width: 100%;">&nbsp;</label>
+                            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="keep()">更&nbsp;新</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="rule_item">
+                    <div class="rule_item_header row">
+                        <h4 class="col-md-1" style="min-width:150px">离线更新</h4>
+                    </div>
+                    <div style="margin:20px">
+                        <div class="input-file">
+                            <form id="upload" method="post" enctype="multipart/form-data">
+                                <input type="text" id="avatval" placeholder="请选择文件···" readonly="readonly" style="vertical-align: middle;" />
+                                <input type="file" name="file" id="avatar" />
+                                <a href="javascript:void(0);" ng-click="uploadPic()" class="button-selectimg" id="avatsel1">上传文件</a>
+                                <!-- <span>上传成功！</span> -->
+                            </form>
+                        </div>
+                    </div>
+                  
+                    <div class="row">
+                        <div class="form-group col-md-1 col-md-offset-5">
+                            <label style="width: 100%;">&nbsp;</label>
+                            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="keep()">更&nbsp;新</button>
                         </div>
                     </div>
                 </div>
